force-app/main/default/objects/Lead/fields/Interest_Details__c.field-meta.xml
<CustomField>
    <fullName>Interest_Details__c</fullName>
    <label>Interest Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>