force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <inlineHelpText>Lead Scoring helps your sales team prioritize high-quality leads</inlineHelpText>
    <label>⚡Lead Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>