force-app/main/default/objects/Lead/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <formula>RecordType.Name &amp; &quot; - &quot; &amp; Product_Interest__r.Name &amp; &quot; - &quot; &amp;  LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>