force-app/main/default/objects/Lead/recordTypes/B2B_Equipments.recordType-meta.xml
<RecordType>
    <fullName>B2B_Equipments</fullName>
    <active>true</active>
    <businessProcess>B2B</businessProcess>
    <description>B2B Equipments</description>
    <label>B2B Equipments</label>
</RecordType>