force-app/main/default/objects/Lead/recordTypes/B2B_Real_Estate.recordType-meta.xml
<RecordType>
    <fullName>B2B_Real_Estate</fullName>
    <active>true</active>
    <businessProcess>B2B</businessProcess>
    <description>B2B Real Estate</description>
    <label>B2B Real Estate</label>
</RecordType>