force-app/main/default/objects/Lead/recordTypes/B2C_Equipments.recordType-meta.xml
<RecordType>
    <fullName>B2C_Equipments</fullName>
    <active>true</active>
    <businessProcess>B2C</businessProcess>
    <description>B2C Equipments</description>
    <label>B2C Equipments</label>
</RecordType>