force-app/main/default/objects/Lead/recordTypes/B2C_Real_Estate.recordType-meta.xml
<RecordType>
    <fullName>B2C_Real_Estate</fullName>
    <active>true</active>
    <businessProcess>B2C</businessProcess>
    <description>B2C Real Estate</description>
    <label>B2C Real Estate</label>
</RecordType>